# cppJNI

./: CMakeLists.txt  README  README.md
include/cppjni/: check_java_exceptions.hpp  java_cast.fwd.hpp  java_cast.hpp  jni_exception.hpp  jni_thread_hint.hpp  jni_version.hpp  method_signature.hpp  native_cast.fwd.hpp  native_cast.hpp  virtual_machine.fwd.hpp  virtual_machine.hpp
include/cppjni/concepts/: is_java_class_definition.hpp  is_jni_reference_type.hpp  is_jni_reference_wrapper_type.hpp  static_list.hpp  string_type.hpp
include/cppjni/jni_wrappers/: call_constructor.hpp  call_object_method.hpp  call_static_method.hpp  class_loader.hpp  current_environment.hpp  environment.hpp  exception_check.hpp  find_class.hpp  generate_jni_signature_string.hpp  global_reference.fwd.hpp  global_reference.hpp  local_reference.fwd.hpp  local_reference.hpp  method_id_cache.hpp
include/cppjni/meta_declaration/: generate_overloaded_constructor_declarations.hpp  generate_overloaded_method_declarations.hpp  jni_constructor_signature_hack.hpp  method_declaration.hpp  method_scope_category.hpp  scoped_declaration.hpp  signature_info.hpp
include/cppjni/method_call/: method_caller.hpp
include/cppjni/mpl/: all.hpp  apply.hpp  condition.hpp  deferred_call.hpp  filter.hpp  find.hpp  find_if.hpp  head.hpp  identity.hpp  join.hpp  join.hpp_4096  list.hpp  optional.hpp  pipeline.hpp  size.hpp  transform.hpp  zip.hpp
include/cppjni/predefined/java/lang/: class.fwd.hpp  class.hpp  comparable.hpp  object.fwd.hpp  object.hpp  string.hpp  throwable.hpp
include/cppjni/predefined/java/util/: iterator.hpp  list.hpp
include/cppjni/types/: base_object_container.hpp  class.hpp  object.fwd.hpp  object.hpp  object_converter.fwd.hpp  object_converter.hpp  primitives.hpp  string.fwd.hpp  string.hpp
src/: CMakeLists.txt  virtual_machine.cpp
src/jni_wrappers/: call_object_method.cpp  call_static_method.cpp  environment.cpp  exception_check.cpp  find_class.cpp  method_id_cache.cpp
src/types/: string.cpp
tst/: .gdbinit  CMakeLists.txt  ClassShould.cpp  ObjectShould.cpp  PredefinedShould.cpp  VMInstance.cpp  VirtualMachineShould.cpp  class_should.cpp  jni_mpl_should.cpp  mpl_should.cpp  object_should.cpp  predefined_should.cpp  virtual_machine_should.cpp  vm_instance.cpp  vm_instance.hpp
tst/test_subject/jni/test/: JNITest.hpp  JNITest.java
